@@ -4,6 +4,7 @@ import { useAccount } from 'wcstripe/data/account';
 import {
 	useManualCapture,
 	useSavedCards,
+	useEnabledPaymentMethodIds,
 	useIsShortAccountStatementEnabled,
 	useSeparateCardForm,
 	useGetSavingError,
@@ -19,6 +20,7 @@ jest.mock( 'wcstripe/data', () => ( {
 	useIsShortAccountStatementEnabled: jest.fn(),
 	useSeparateCardForm: jest.fn(),
 	useGetSavingError: jest.fn(),
+	useEnabledPaymentMethodIds: jest.fn(),
 } ) );
 
 describe( 'PaymentsAndTransactionsSection', () => {
@@ -30,6 +32,7 @@ describe( 'PaymentsAndTransactionsSection', () => {
 			jest.fn(),
 		] );
 		useSeparateCardForm.mockReturnValue( [ true, jest.fn() ] );
+		useEnabledPaymentMethodIds.mockReturnValue( [ [ 'card' ], jest.fn() ] );
 		useAccount.mockReturnValue( {
 			data: {
 				account: {
@@ -69,6 +72,12 @@ describe( 'PaymentsAndTransactionsSection', () => {
 				'.shortened-bank-statement .transaction-detail.description'
 			)
 		).toHaveTextContent( 'WOOTEST* W #123456' );
+
+		expect(
+			document.querySelector(
+				'.full-bank-statement .statement-icon-and-title'
+			)
+		).toHaveTextContent( 'All Other Payment Methods' );
 	} );
 
 	it( 'should not show the shortened customer bank statement preview when useIsShortAccountStatementEnabled is false', () => {
@@ -84,5 +93,36 @@ describe( 'PaymentsAndTransactionsSection', () => {
 				'.shortened-bank-statement .transaction-detail.description'
 			)
 		).toBe( null );
+	} );
+
+	it( 'should display a third statement preview when Cash App Pay is enabled', () => {
+		useIsShortAccountStatementEnabled.mockReturnValue( [
+			true,
+			jest.fn(),
+		] );
+		useEnabledPaymentMethodIds.mockReturnValue( [
+			[ 'card', 'cashapp' ],
+			jest.fn(),
+		] );
+
+		render( <PaymentsAndTransactionsSection /> );
+
+		expect(
+			document.querySelector(
+				'.shortened-bank-statement .transaction-detail.description'
+			)
+		).toHaveTextContent( 'WOOTEST* W #123456' );
+
+		expect(
+			document.querySelectorAll(
+				'.full-bank-statement .statement-icon-and-title'
+			)[ 0 ]
+		).toHaveTextContent( 'Cash App Payments' );
+
+		expect(
+			document.querySelectorAll(
+				'.full-bank-statement .statement-icon-and-title'
+			)[ 1 ]
+		).toHaveTextContent( 'All Other Payment Methods' );
 	} );
 } );
