@@ -1,6 +1,7 @@
 *** Changelog ***
 = 8.5.0 - 2024-xx-xx =
 * Fix - When using a saved payment method, update the payment method's address immediately upon checkout. Fixes issues where Stripe may throw address validation errors.
+* Tweak - Add a statement descriptor preview for Cash App Payments.
 * Add - Allow customizing the title and description of the UPE payment methods.
 
 = 8.4.0 - 2024-06-13 =
